--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@astrojs/node": "^9.3.0"
   }
 }
