Make the front nav bar hidden

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vercel": "^8.2.3",
     "@chatscope/chat-ui-kit-react": "^2.1.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@floating-ui/react": "^0.27.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
