--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.1.28",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "postcss": "^8.5.6",
