--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "dist"
   ],
   "compilerOptions": {
+    "verbatimModuleSyntax": false,
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
