--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hotkeys-hook": "^5.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
