--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-hotkeys-hook": "^5.2.1",
     "tailwind-merge": "^3.3.1",
