--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "NODE_ENV=development astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
@@ -42,6 +44,12 @@
   },
   "devDependencies": {
     "@astrojs/node": "^9.3.0",
-    "tw-animate-css": "^1.4.0"
+    "@chromatic-com/storybook": "^4.1.1",
+    "@storybook/addon-mcp": "^0.0.5",
+    "@storybook/react-vite": "^9.1.13",
+    "playwright": "^1.56.1",
+    "storybook": "^9.1.13",
+    "tw-animate-css": "^1.4.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
