--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@base-ui-components/react": "1.0.0-beta.4",
     "@chatscope/chat-ui-kit-react": "^2.1.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@emotion/css": "^11.13.5",
     "@floating-ui/react": "^0.27.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -23,6 +24,12 @@
     "@react-spring/web": "^10.0.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "@tiptap/extension-document": "^3.7.2",
+    "@tiptap/extension-text-style": "^3.7.2",
+    "@tiptap/extensions": "^3.7.2",
+    "@tiptap/pm": "^3.7.2",
+    "@tiptap/react": "^3.7.2",
+    "@tiptap/starter-kit": "^3.7.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.11.0",
@@ -31,6 +38,8 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.1.28",
     "gsap": "^3.13.0",
+    "install": "^0.13.0",
+    "is-hotkey": "^0.2.0",
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "postcss": "^8.5.6",
@@ -41,6 +50,10 @@
     "react-dom": "^19.1.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-icons": "^5.5.0",
+    "sass-embedded": "^1.93.2",
+    "slate": "^0.118.1",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
