--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@floating-ui/react": "^0.27.16",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-spring/web": "^10.0.3",
@@ -58,7 +59,8 @@
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "timeago-react": "^3.0.7"
   },
   "devDependencies": {
     "@astrojs/node": "^9.3.0",
