--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/vercel": "^8.2.3",
+    "@astrojs/react": "^4.4.1",
+    "@astrojs/vercel": "^8.2.11",
     "@base-ui-components/react": "1.0.0-beta.4",
     "@chatscope/chat-ui-kit-react": "^2.1.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
@@ -25,22 +25,22 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-spring/web": "^10.0.3",
     "@storybook/test": "^8.6.14",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tailwindcss/vite": "^4.1.11",
-    "@tiptap/core": "^3.7.2",
-    "@tiptap/extension-document": "^3.7.2",
-    "@tiptap/extension-text-style": "^3.7.2",
-    "@tiptap/extensions": "^3.7.2",
-    "@tiptap/pm": "^3.7.2",
-    "@tiptap/react": "^3.7.2",
-    "@tiptap/starter-kit": "^3.7.2",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "astro": "^5.11.0",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.16",
+    "@tiptap/core": "^3.10.1",
+    "@tiptap/extension-document": "^3.10.1",
+    "@tiptap/extension-text-style": "^3.10.1",
+    "@tiptap/extensions": "^3.10.1",
+    "@tiptap/pm": "^3.10.1",
+    "@tiptap/react": "^3.10.1",
+    "@tiptap/starter-kit": "^3.10.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "astro": "^5.15.3",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "daisyui": "^5.1.28",
+    "daisyui": "^5.4.2",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
     "is-hotkey": "^0.2.0",
@@ -48,27 +48,28 @@
     "motion": "^12.23.24",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
-    "react": "^19.1.0",
+    "react": "^19.2.0",
+    "react-customize-token-input": "^2.6.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-icons": "^5.5.0",
-    "sass-embedded": "^1.93.2",
+    "sass-embedded": "^1.93.3",
     "slate": "^0.118.1",
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.4",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.16",
     "timeago-react": "^3.0.7"
   },
   "devDependencies": {
-    "@astrojs/node": "^9.3.0",
-    "@chromatic-com/storybook": "^4.1.1",
+    "@astrojs/node": "^9.5.0",
+    "@chromatic-com/storybook": "^4.1.2",
     "@storybook/addon-mcp": "^0.0.5",
-    "@storybook/react-vite": "^9.1.13",
+    "@storybook/react-vite": "^9.1.16",
     "playwright": "^1.56.1",
-    "storybook": "^9.1.13",
+    "storybook": "^9.1.16",
     "tw-animate-css": "^1.4.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
