--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/css": "^11.13.5",
     "@floating-ui/react": "^0.27.16",
+    "@nanostores/persistent": "^1.2.0",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slider": "^1.3.6",
@@ -37,10 +38,12 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro": "^5.15.3",
+    "astro-theme-provider": "^0.7.1",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.4.2",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
     "is-hotkey": "^0.2.0",
