--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/css": "^11.13.5",
     "@floating-ui/react": "^0.27.16",
+    "@google-cloud/recaptcha-enterprise": "^6.3.1",
     "@nanostores/persistent": "^1.2.0",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-label": "^2.1.7",
