--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-customize-token-input": "^2.6.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^19.2.0",
     "react-hotkeys-hook": "^5.2.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
