--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "framer-motion": "^12.23.24",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.545.0",
+    "mongodb": "^7.0.0",
     "motion": "^12.23.24",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
