--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.4.2",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.545.0",
